Edited wiki page through web user interface.

--- a/wiki/GDD.wiki
+++ b/wiki/GDD.wiki
@@ -1,6 +1,11 @@
 #summary Game Design Document, by Nev3ra, for all participants to edit freely.
+#sidebar TableOfContents
 
-----
+* [Articles Gameplay]
+    * [Articles Main Gameplay]
+    * [ArticlesDom DOM manipulation]
+    * [ArticlesStyle CSS and style]
+    * [ArticlesTips Tips and tricks]
 
 = General =
 
@@ -14,7 +19,7 @@
 
 ----
 
-= Gameplay =
+=Gameplay=
 
 ==Main Gameplay==
 
