Edited wiki page through web user interface.

--- a/wiki/GDD.wiki
+++ b/wiki/GDD.wiki
@@ -1,7 +1,7 @@
 #summary Game Design Document, by Nev3ra, for all participants to edit freely.
 #sidebar TableOfContents
 
-* [GDD Gameplay]
+* [GDD#Gameplay Gameplay]
     * [GDD Main Gameplay]
     * [ArticlesDom DOM manipulation]
     * [ArticlesStyle CSS and style]
