--- a/wiki/GDD.wiki
+++ b/wiki/GDD.wiki
@@ -17,6 +17,11 @@
 * [GDD#Technical_in-debth_info Technical In-debth info]
     * [GDD#A_world_in_layers A World in Layers]
     * [GDD#Character_animation Character Animation]
+* [GDD#Media Media]
+    * [GDD#Concept Concept]
+    * [GDD#Alpha Alpha]
+    * [GDD#Beta Beta]
+
 
 ----
 
@@ -29,6 +34,7 @@
 *Codename:* 2DASP
 
 *Written in:* C++
+
 
 ----
 
@@ -103,3 +109,19 @@ if speed = 2 - Loop of running animation, while the object itself moves to the r
 To go from running to standing (2->0), the concept above reverse, only with a modified "if speed = 1.
 
 Inspiration for the animations is taken from Prince of Persia for the NES. Take a look[http://www.youtube.com/watch?v=Cojo21zLd0Y Prince of Persia NES].
+
+=Media=
+
+Heres a collection of images, video etc, related to the project.
+
+==Concept==
+
+http://i44.tinypic.com/23idzsz.jpg
+
+==Alpha==
+
+--
+
+==Beta==
+
+--
