Edited wiki page through web user interface.

--- a/wiki/Concept.wiki
+++ b/wiki/Concept.wiki
@@ -11,7 +11,7 @@
 
 =Introduction=
 
-|| *Platform(s)* || Windows, Linux, MacOS, _(XBLA)_ ||
+|| *Platform(s)* || Windows, Linux, Mac, _(XBLA)_ ||
 || *Input Method(s)* || Keyboard, Gamepad ||
 || *Genre* || Side-scrolling Platformer ||
 || *Developer(s)* || ./GLHF Game Studios ||
