Edited wiki page through web user interface.

--- a/wiki/Concept.wiki
+++ b/wiki/Concept.wiki
@@ -8,10 +8,7 @@
   * [Concept#Key_Features Key Features]
   * [Concept#Concept_Art Concept Art]
 
-
-=Introduction=
-
-|| *Platform(s)* || Windows, Linux, Mac, _(XBLA)_ ||
+|| *Platform(s)* || Windows, Linux, Mac ||
 || *Input Method(s)* || Keyboard, Gamepad ||
 || *Genre* || Side-scrolling Platformer ||
 || *Developer(s)* || ./GLHF Game Studios ||
@@ -20,17 +17,16 @@
 || *System Req.* || TBD ||
 || *Media* || DLC ||
 
+=Introduction=
+
 
 This project, codenamed the-escapist, is a 2D side-scrolling platformer for the PC, made from scratch in SDL. The key features will be the vector'ish artwork that makes the game a piece of art, and the unique aspects of the rather normal 2D genre.
 
 ----
 
-  Note
-  Things written in *_bold italic_* is not final, and do not have any title yet.
-
 =Description=
 
-As you start up the game, a slick menu appears, giving a little impression on how the general atmosphere in the game is. Soon you're welcomed into *_the protagonists_* amazing 2D world. A nice little intro sequence gives you a kickstart into the story, and the game itself, and then glides over, almost unnoticeable, giving you control over *_the protagonist_*. Your adventure starts here.
+As you start up the game, a slick menu appears, giving a little impression on how the general atmosphere and graphics in the game is. Soon you're welcomed into _the protagonists_ amazing 2D world. A nice little intro sequence gives you a kickstart into the story, and the game itself, and then glides over, almost unnoticeable, giving you control over _the protagonist_. Your adventure starts here.
 
 Soon you notice that the black surface you walk on is special. If you stand still for too long, the black, goo-like surface will engulf you, leading to death. But at the same time, you'll also notice that this surface is the only surface you may walk on. In other words, its both the source of life, and death. 
 
