--- a/wiki/GDD.wiki
+++ b/wiki/GDD.wiki
@@ -1,140 +1,266 @@
-#summary Game Design Document. The projects bible, all final info can be found here.
+#summary Game Design Document. The projects bible, If it’s not here, it won’t be in the game.
 #labels Featured,Phase-Design
 #sidebar TableOfContents
 
-* [GDD#General_Info General Info]
+=Game Title=
 
-* [GDD#Gameplay Gameplay]
-    * [GDD#Main_Gameplay Main Gameplay]
-    * [GDD#Hectical_Gameplay Hectical Gameplay]
-    * [GDD#Character_evolving_over_time Character Evolving over time]
-    * [GDD#Replay_Worthiness Replay Worthiness]
-    * [GDD#Balance Balance]
-    * [GDD#Art Art]
-    * [GDD#Checkpoints Checkpoints]
-* [GDD#Story Story]
-    * [GDD#Central_Element Central element]
-    * [GDD#Chapters_and_Levels Chapters and Levels]
-* [GDD#Technical_in-debth_info Technical In-debth info]
-    * [GDD#A_world_in_layers A World in Layers]
-    * [GDD#Character_animation Character Animation]
-* [GDD#Media Media]
-    * [GDD#Concept Concept]
-    * [GDD#Pre-Alpha Pre-Alpha]
-    * [GDD#Alpha Alpha]
-    * [GDD#Beta Beta]
-    * [GDD#Release_Candidate Release Candidate]
+==Game Name==
+
+At the moment there's only a codename; The Escapist. The official name will come soon.
+
+==Copyright Information==
+
+GPL3
+
+This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version. 
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 
-----
 
-= General Info =
+==GDD Version==
 
-*Genre:* 2D sidescrolling platformer
+v0.1 by nev3ra. 06.06.09
 
-*Developed by:* "./GLHF Game Studios"
+=Table of Contents=
 
-*Codename:* 2DASP
+table
 
-*Written in:* C++
+table
 
+table
 
-----
+table
 
-=Gameplay=
+=Design History=
 
-==Main Gameplay==
+  * 06.06.09: We're at the concept phase, and closing up on the pre-alhpa stage.
+  * 31.05.09: The project is started.
 
-The player takes control of a character, which is a black silhouette of a man. This character can only move on the black surface, and are always under timepressure, because after (x) seconds, the black ground will engulf the player, leading to death. Also, standing still for way to long on the black surface will also engulf the character. To avoid being dragged down into the black surface, the player must collect some sort of powerups/items.
+=Game Overview=
 
-_*Keyword;*_ The black surface will be the source of life, and death.
+==Game Concept==
 
+-
 
-_Additional alternatives_
+==Genre==
 
-_As said, the player can only move on the black surface. But, this wont be everywhere (though mostly everywhere). So, a skill to kind of splutter the black surface material to the ground where its not possible to move, could be an alternative. This would add varation to the game, as the player dont have unlimitied "ammo", so plans and preserving of the ammo available is crucial._
+-
 
-==Hectical Gameplay==
+==Target Audience==
 
-Tha goal is do create a little hectical gameplay, where the player have to focus, and not just go through the game on "autopilot". The player must be kept interested at all times, and push the player into our world. Breaks will also occur (Pause from the "engulfing ground"), where the player may relax for as long as he wants. If the whole level would be under intense timepressure, it would get to stressful.
+-
 
-==Character evolving over time==
+==Game Flow Summary==
 
-The character evolves over time? (Magic, skills, ..attributes?)
+How does the player move through the game.   Both through framing interface and the game itself.
 
-==Replay Worthiness==
+==Look and Feel==
 
-_"You only play until you have mastered the pattern"_ - Must be more to do than just to finish the game. Replay worthiness. Exploring? Should be possible, and it should pay - but may not change the overall gameplay. Bold example; End of level - "You missed x of x secrets", then some sort of reward. Timeattack mode could also be added. After the game is finished for the first time, the player may try it.
+What is the basic look and feel of the game?  What is the visual style?
 
-==Balance==
+==Project Scope==
 
-"Real fun comes from challenges that are always at the margin of our ability" 
+A summary of the scope of the game.
 
-==Art==
+===Number of Levels===
 
-The aim is also to portrait the game as a piece of art. Puzzles with more than one correct answer, that the player can interpret the way he wants. Though, the story must not end up being untidy or unclear.
+10 levels, on 3 islands.
 
+===Number of NPC's===
 
-==Checkpoints==
+-
 
-Dying, and then needing to do way to much all over again belongs to the early 90's. In this game we want plenty of checkpoints, as it is a positive thing, and keeps the game flowing. It also has to be possible to spawn from last checkpoint whenever the player wants to, for example if he wasted the "ammo" for the black surface, etc.
+===Number of powerups===
 
-----
+-
 
-=Story=
+=Gameplay and Mechanics=
 
-==Central Element==
+-
 
-The thing about not being able to walk on the black, thick, "liquidish" surface, and that it may kill you, will have a big role when it comes to the story. Same goes with evolving the character over time.
+==Gameplay==
 
-_*Keyword;*_ The black surface will be the source of life, and death.
+-
 
-==Chapters and Levels==
+===Game Progression===
 
-The levels will be divided up in Acts. For example, "Act I - Nameofact".
+-
 
-=Technical In-debth info=
+===Mission/Challenge structure===
 
-==A world in layers==
+-
 
-The world of this 2D game will be built in layers. To be exact, a total of 9 layers, where 5 of them is "Enviromental layers", and 3 "base layers"; the ground the player walk on, and two layers for bushes/vegetation/misc objects in fron and behind the ground layer. The last layer is dedicated to the character.
+===Objectives===
 
-Example; LINK
+What are the objectives of the game?
 
-==Character animation==
+===Play Flow===
 
-The animation could be divided up in several sprites, where one sprite is the whole character. Kind of like frames in movies. An example;
+How does the game flow for the game player
 
-if speed = 0 - Loop of standing-still-animation (a few frames)
-if speed = 1 - middle animation from standing, to running animation. ca 0,5 sec length.
-if speed = 2 - Loop of running animation, while the object itself moves to the right/left.
+==Mechanics==
 
-To go from running to standing (2->0), the concept above reverse, only with a modified "if speed = 1.
+What are the rules to the game, both implicit and explicit.  This is the model of the universe that the game works under.  Think of it as a simulation of a world, how do all the pieces interact?  This actually can be a very large section.
 
-Inspiration for the animations is taken from Prince of Persia for the NES. Take a look[http://www.youtube.com/watch?v=Cojo21zLd0Y Prince of Persia NES].
+===Physics===
 
-----
+How does the physical universe work?
 
-=Media=
+===Movement===
 
-Heres a collection of images, video etc, related to the project. Also interesting to see how the project evolves.
+-
 
-==Concept==
+====General movement==== 
 
-http://i44.tinypic.com/23idzsz.jpg
+-
 
-==Pre-Alpha==
+====Other movement====
 
---
+-
 
-==Alpha==
+===Objects===
 
---
+-
 
-==Beta==
+====Picking up objects==== 
 
---
+-
 
-==Release Candidate==
+====Moving objects====
 
---
+-
+
+===Actions===
+
+-
+
+====Switches and buttons====
+
+-
+
+====Picking up, Carrying, and Dropping====
+
+-
+
+====Talking====
+
+-
+
+====Reading====
+
+-
+
+===Combat===
+
+-
+
+===Economy===
+
+How is the economy in the game handeled?
+
+==Screen Flow==
+
+-
+
+===Screen Flow Chart===
+
+A graphical description of how each screen is related to every other
+
+===Screen Descriptions===
+
+What is the purpose of each screen.
+
+====Main Menu Screen====
+
+-
+
+====Options Screen====
+
+-
+
+====Load Game Screen====
+
+-
+
+===Game Options===
+
+What are the options? How do they affect the game?
+
+===Saving===
+
+-
+
+===Cheats and Easter Eggs===
+
+-
+
+=Story, Setting and Character=
+
+-
+
+==Story and Narrative==
+
+Specific details like scripts and cut scenes may not be in this document but be in the Story Bible.  
+
+===Back Story===
+
+-
+
+===Plot Elements===
+
+-
+
+===Cut Scenes===
+
+-
+
+==Game World==
+
+-
+
+===General Look and Feel===
+
+10 levels on 3 islands. Etc.
+
+====Act 1====
+
+-
+
+====Act 2====
+
+-
+
+====Act 3====
+
+-
+
+====Act 4====
+
+-
+
+====Act 5====
+
+-
+
+====Act 6====
+
+-
+
+====Act 7====
+
+-
+
+====Act 8====
+
+-
+
+====Act 9====
+
+-
+
+====Act 10====
+
+-
+
+==Characters==
